# sampleworks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  GRID_SEARCH.md  LICENSE  README.md  docker-entrypoint.sh  new_run_grid_search.py  pixi.toml  pyproject-hatch.toml  pyproject.toml  run_all_models.sh  run_grid_search.py
.github/workflows/: ci.yml  docker.yml  gpu-tests.yml  release.yml  run-boltz-tests.yml
evaluation/: README.md  cctbx_rfree.py
examples/: boltz1_fk_steering.py  boltz1_pure_guidance.py  boltz2_fk_steering.py  boltz2_pure_guidance.py  protenix_fk_steering.py  protenix_pure_guidance.py  rf3_fk_steering.py  rf3_pure_guidance.py  run_guidance_pipeline.py
k8s/: job-boltz2-md.yaml  job-boltz2-xrd.yaml  job-protenix.yaml  job-rf3.yaml  sampleworks-job-template.yaml
scripts/: boltz1_fk_steering.py  boltz1_pure_guidance.py  boltz2_fk_steering.py  boltz2_pure_guidance.py  patch_input_cif_files.py  protenix_fk_steering.py  protenix_pure_guidance.py  rf3_fk_steering.py  rf3_pure_guidance.py  run_and_process_phenix_clashscore.py  run_guidance_pipeline.py
scripts/eval/: bond_geometry_eval.py  find_altloc_selections.py  lddt_evaluation_script.py  rscc_grid_search_script.py  run_and_process_phenix_clashscore.py
src/sampleworks/: __init__.py
src/sampleworks/core/forward_models/xray/: real_space_density.py
src/sampleworks/core/forward_models/xray/real_space_density_deps/ops/: __init__.py  dilate_points_cuda.py
src/sampleworks/core/forward_models/xray/real_space_density_deps/ops/csrc/: __init__.py  dilate_points_ext.cpp  setup.py
src/sampleworks/core/forward_models/xray/real_space_density_deps/ops/csrc/cuda/: dilate_points_impl.cu  dilate_points_kernel.cu
src/sampleworks/core/forward_models/xray/real_space_density_deps/qfit/: __init__.py  mtzfile.py  sf.py  spacegroups.py  transformer.py  unitcell.py  volume.py
src/sampleworks/core/forward_models/xray/real_space_density_deps/utils/: interpolation.py  quadrature.py
src/sampleworks/core/rewards/: protocol.py  real_space_density.py  utils.py
src/sampleworks/core/samplers/: __init__.py  af3.py  edm.py  protocol.py
src/sampleworks/core/scalers/: __init__.py  fk_steering.py  protocol.py  pure_guidance.py  score_scalers.py  step_scalers.py
src/sampleworks/data/: protein_configs.csv
src/sampleworks/eval/: bond_angle_and_length_outlier_eval_script.py  constants.py  eval_dataclasses.py  generate_synthetic_density.py  grid_search_eval_utils.py  lddt_evaluation_script.py  metrics.py  occupancy_utils.py  rscc_grid_search_analysis.py  rscc_grid_search_script.py  run_grid_search.py  structure_utils.py
src/sampleworks/metrics/: __init__.py  lddt.py  metadata.py  metric.py  metric_utils.py  sidechain_metrics.py
src/sampleworks/models/: model_wrapper_protocol.py  protocol.py  utils.py
src/sampleworks/models/boltz/: wrapper.py
src/sampleworks/models/proteinix/: wrapper.py
src/sampleworks/models/protenix/: structure_processing.py  wrapper.py
src/sampleworks/models/rf3/: __init__.py  wrapper.py
src/sampleworks/utils/: __init__.py  atom_array_utils.py  atom_reconciler.py  checkpoint_utils.py  cif_utils.py  density_utils.py  elements.py  frame_transforms.py  framework_utils.py  grid_search_utils.py  guidance_constants.py  guidance_script_arguments.py  guidance_script_utils.py  imports.py  mmseqs2.py  msa.py  protein_input.py  setup.py  structure_utils.py  torch_utils.py
tests/: conftest.py  test_imports.py
tests/eval/: test_eval_dataclasses.py  test_structure_utils.py
tests/integration/: __init__.py  test_mismatch_integration.py  test_pipeline_integration.py
tests/metrics/: test_lddt_metrics.py
tests/mocks/: __init__.py  model_wrappers.py  rewards.py  samplers.py  scalers.py  trajectory_scalers.py
tests/models/: test_model_wrapper_protocol.py
tests/models/boltz/: test_boltz_wrapper.py
tests/models/protenix/: test_ccd_expansion.py
tests/resources/1vme/: 1vme_final.cif  1vme_final_carved_edited_0.5occA_0.5occB.cif
tests/resources/2YL0/: 2YL0_single_001_density_input.cif
tests/resources/5SOP/: 5SOP_single_001_density_input.cif
tests/resources/6NI6/: 6NI6_single_001_density_input.cif
tests/resources/9BN8/: 9BN8_single_001_density_input.cif
tests/rewards/: test_real_space_density_reward.py
tests/samplers/: af3.py
tests/utils/: atom_array_builders.py  conftest.py  test_atom_array_utils.py  test_atom_reconciler.py  test_density_utils.py  test_frame_transforms.py  test_framework_utils.py  test_guidance_script_arguments.py  test_guidance_script_utils.py
