[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
analysis = [
  "ipython",
  "marimo",
  "matplotlib",
  "mdtraj",
  "pandas",
  "peppr",
  "polars",
  "pyzmq",
  "scikit-learn",
  "seaborn"
]
boltz = ["boltz", "cuequivariance-torch", "cuequivariance-ops-torch-cu12", "rdkit>=2025.3.6"]
dev = ["pytest", "pytest-cov", "mypy", "prek", "ty", "ruff", "pytest-loguru"]
protenix = ["protenix>=0.6.3", "einx", "triton"]

[project]
authors = [{email = "karson.chrispens@ucsf.edu", name = "Karson Chrispens"}]
dependencies = [
  "atomworks[ml]==2.1.1",
  "python-dotenv",
  "jaxtyping",
  "jax",
  "einx",
  "hydra-core",
  "loguru",
  "omegaconf"
]
name = "sampleworks"
requires-python = ">= 3.11, <3.14"
version = "0.1.0"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
disallow_untyped_defs = false
ignore_missing_imports = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pixi.activation.env]
PYTHONNOUSERSITE = "1"

[tool.pixi.dependencies]
gcc_linux-64 = ">=9,<13"
gxx_linux-64 = ">=9,<13"
ninja = "*"
numpy = "<2.0"
pyarrow = "==17.0.0"

[tool.pixi.environments]
analysis = {features = ["analysis"]}
analysis-dev = {features = ["analysis", "dev"]}
boltz = {features = ["boltz"]}
boltz-analysis = {features = ["boltz", "analysis"]}
boltz-dev = {features = ["boltz", "dev"]}
protenix = {features = ["protenix"]}
protenix-dev = {features = ["protenix", "dev"]}
rf3 = {features = ["rf3"]}
rf3-dev = {features = ["rf3", "dev"]}

[tool.pixi.feature.protenix.pypi-options.dependency-overrides]
rdkit = ">=2024.3.5,<2025.9"

[tool.pixi.feature.rf3.pypi-dependencies]
rc-foundry = {editable = true, extras = ["rf3"], git = "https://github.com/k-chrispens/foundry.git"}

[tool.pixi.pypi-dependencies]
sampleworks = {editable = true, path = "."}

[tool.pixi.system-requirements]
cuda = "12"

# Includes slow tests that require GPU or model weights
[tool.pixi.tasks.all-tests]
args = [{arg = "flags", default = ""}]
cmd = "pytest {{ flags }}"

# Cross-env tasks use bash to orchestrate across environments because pixi's
# depends-on/alias mechanism only works within a single environment.
# This continues past failures, exits 1 if any env failed.
[tool.pixi.tasks.test-all]
cmd = "f=0; pixi run -e boltz-dev all-tests || f=1; pixi run -e protenix-dev all-tests || f=1; pixi run -e rf3-dev all-tests || f=1; exit $f"

[tool.pixi.tasks.test-fast]
cmd = "f=0; pixi run -e boltz-dev tests || f=1; pixi run -e protenix-dev tests || f=1; pixi run -e rf3-dev tests || f=1; exit $f"

# NOTE: if new model environment is added, we need new entries here
# Per-env: pixi run -e rf3-dev tests "-k integration"
[tool.pixi.tasks.tests]
args = [{arg = "flags", default = ""}]
cmd = "pytest -m 'not slow' {{ flags }}"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pytest.ini_options]
addopts = "-v --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 100
src = []
target-version = "py312"

[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E721", "E731", "E741", "F722", "UP015"]
select = ["E", "F", "I001", "UP"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"collections" = "co"
"functools" = "ft"
"itertools" = "it"

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"*.mo.py" = ["ALL"]

[tool.ty.environment]
python-version = "3.11"

[[tool.ty.overrides]]
include = ["src/sampleworks/eval/bond_angle_and_length_outlier_eval_script.py"]

[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"

[tool.ty.rules]
unresolved-import = "ignore"
